--- a/docs/v1.md
+++ b/docs/v1.md
@@ -485,7 +485,7 @@ flowchart TD
 - `streamEntries(callback, keyPrefix): Promise<void>` - Stream all cache entries
 - `subscribe(): Promise<void>` - Subscribe to cache events
 - `getResponseById(id, keyPrefix): Promise<string | null>` - Get response body by ID
-- `getDependentEntries(id, keyPrefix): Promise<CacheEntry[]>` - Get entries sharing cache tags
+- `getDependentEntries(id, keyPrefix): Promise<CacheValueWithAdditionalProperties[]>` - Get entries sharing cache tags
 - `deleteIds(ids, keyPrefix): Promise<void>` - Delete entries by IDs
 - `close(): Promise<void>` - Close connections
 
